--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,8 +1,28 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px 
-
-@media (max-width: 1000px)
+  .content
+    width: 75%
+  .tabs
+    width: 25%   
+  .article
+    &-card
+      overflow: hidden
+      text-overflow: ellipsis
+    &__title
+      font-size: 14px
+      line-height: 20px
+  .tabs
+    &__title
+      padding: 15px
+    &-item
+      padding: 15px   
+      &__text
+        margin-bottom: 0 
+        font-size: 13px
+        line-height: 18px
+       
+@media (max-width: 1005px)
   .container
     max-width: 800px  
   .header
@@ -14,26 +34,122 @@
         align-items: flex-end
       &__date
         margin-bottom: 5px 
+  .article
+    padding: 15px 15px 15px 15px
+    height: auto
+    &__title
+      font-size: 12px
+      line-height: 15px
+    &__img
+      width: 55px
+      height: 55px
+      margin-left: 10px      
+  .divider
+    margin-left: 15px
+    margin-right: 15px
+
+  .content
+    &-info
+      &__title
+        font-size: 30px
+        line-height: 40px
 @media (max-width: 880px)
   .container
     max-width: 700px  
+  body
+    padding-top: 135px  
   .header
     &-bottom
       &__text
         display: none
+    &-top
+      position: fixed
+      left: 0
+      right: 0
+      top: 0
+      z-index: 100  
   .navbar
-    &-menu
-      display: none 
+    display: none
+    position: fixed
+    z-index: 100
+    left: 0
+    right: 0
+    bottom: 0
+    top: 135px
+    padding-top: 0
+    overflow: auto
+    &--visible
+      display: block
+      background-color: $grey95
+    &-menu       
+      width: 100%
+      height: 100%
+      flex-direction: column 
+      justify-content: space-between
+      align-items: center  
+      &__item
+        margin-bottom: 15px  
   .section
     &__text
-      display: none                    
-                   
+      display: none   
+  .recommended
+    height: 400px
+  .tabs
+    &__title
+      padding: 8px
+    &-item
+      padding: 8px   
+      &__text
+        font-size: 12px
+        line-height: 15px 
+        &-video
+          &:after
+            width: 12px
+            height: 12px
+  .selection
+    height: 450px 
+  .content
+    &-info
+      top: 50%                                
 @media (max-width: 768px)
   .container
-    max-width: 576px
+    max-width: 600px
   .header
     &__subscribe
       display: none
+  .article
+    height: 75px
+    &__img
+      display: none
+  .divider
+    height: 45px 
+  .recommended
+    height: 300px  
+  .selection
+    height: 300px  
+  .tabs
+    &-item
+      padding: 15px
+      &__text
+        display: none  
+    &__title 
+      font-size: 12px
+      line-height: 15px   
+  .content
+    &__author
+      top: 30px
+      left: 20px
+    &-info
+      top: 35% 
+      left: 20px
+      &__title
+        font-size: 25px
+        margin-bottom: 15px
+        line-height: 35px    
+  .player
+    &__text
+      font-size: 12px
+      line-height: 15px
 @media (max-width: 640px)
   .container
     max-width: 440px 
@@ -41,7 +157,34 @@
     &-bottom
       &__img
         display: none   
-            
+  .article
+    padding: 10px 10px 10px 10px
+    &__title
+      font-size: 10px
+      line-height: 14px 
+  .divider
+    margin-left: 8px
+    margin-right: 8px 
+  .content
+    &-info
+      top: 45%
+      &__category
+        display: none
+      &__title
+        display: none
+    &__button
+      margin-bottom: 15px    
+  .button
+    &-block
+      flex-direction: column
+      align-items: flex-start
+  .player
+    &__icon
+      margin-left: 0
+  .modal
+    &__video
+      width: 440px
+      height: 250px
 @media (max-width: 480px)  
   .container  
     max-width: 95%
@@ -51,7 +194,35 @@
       line-height: 14px
   .sign
     &__text
-      display: none 
+      display: none
+  .tabs
+    &__title
+      display: none  
+  .selection
+    height: 270px 
+  .modal
+    &__video
+      width: 400px
+      height: 220px     
+@media (max-width: 390px)  
+  .recommended
+    height: 370px 
+  .article
+    flex-wrap: wrap
+    height: auto
+    &-card
+      width: 45%
+      padding-bottom: 15px
+    &__img
+      display: block
+  .divider  
+    display: none 
+  .modal
+    &__video
+      width: 370px
+      height: 220px  
+
+
 
    
      
