--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -36,19 +36,19 @@
       display: flex
       justify-content: space-between
       align-items: center  
-    &__weather
-      margin-left: 64px  
-      display: flex
-      justify-content: space-between
-      align-items: center
-  &-navbar
-    background-color: $grey100
-  &-sections
+      
+  &-section
     padding: 15px 25px 15px 0   
     display: flex
     justify-content: space-between
     align-items: center
     border-right: 1px solid $grey15
+    &__text
+      font-style: normal
+      font-weight: bold
+      font-size: 14px
+      line-height: 20px
+      color: $grey100
   &__search
     width: 50%
     flex-grow: 1
@@ -62,14 +62,12 @@
     margin-right: 33px
     display: flex
     justify-content: space-between
-    align-items: center   
-  &__sign
-    padding-right: 0
-    padding-top: 15px   
-    padding-bottom: 15px
-    margin-left: 27px
-    display: flex
-    justify-content: space-between
+    align-items: center 
+    &-img
+      width: 66px
+      height: 44px
+      margin-right: 13px
+  
 .search  
   &__img
     width: 18px
@@ -83,12 +81,6 @@
     line-height: 20px
     color: $grey50
 .section
-  &__text
-    font-style: normal
-    font-weight: bold
-    font-size: 14px
-    line-height: 20px
-    color: $grey100
   &-button
     width: 18px
     height: 14px
@@ -106,26 +98,28 @@
       &-short
         width: 12px              
 .subscribe
-  &__img
-    width: 66px
-    height: 44px 
-    margin-right: 13px
   &-info
     display: flex
     flex-direction: column
     justify-content: space-between  
-  &__text
-    font-style: normal
-    font-weight: bold
-    font-size: 12px
-    line-height: 15px
-  &__price
-    font-style: normal
-    font-weight: normal
-    font-size: 12px
-    line-height: 15px
-    color: $grey50
-.sign
+    &__text
+      font-style: normal
+      font-weight: bold
+      font-size: 12px
+      line-height: 15px
+    &__price
+      font-style: normal
+      font-weight: normal
+      font-size: 12px
+      line-height: 15px
+      color: $grey50
+.sign  
+  padding-right: 0
+  padding-top: 15px
+  padding-bottom: 15px
+  margin-left: 27px
+  display: flex
+  justify-content: space-between
   &__img
     width: 16px
     height: 18px
@@ -140,6 +134,10 @@
   width: 184px
   height: 81px    
 .weather
+  margin-left: 64px
+  display: flex
+  justify-content: space-between
+  align-items: center
   &__img
     width: 18px
     height: 18px
@@ -147,13 +145,16 @@
     margin-left: 10px
 
 .navbar
+  background-color: $grey100  
+  &--visible
+    background-color: $grey85 
   &-menu
     list-style: none
     margin: 0
     padding: 18px 0
     display: flex
     justify-content: space-between
-    align-items: center  
+    align-items: center     
     &__item
       font-size: 14px
       line-height: 20px
