--- a/sass/blocks/_recommended.sass
+++ b/sass/blocks/_recommended.sass
@@ -3,19 +3,21 @@
   padding-top: 30px
   background-color: $grey100
 .article
+  width: 100%
+  height: 130px
   background-color: $grey95 
   padding: 25px 25px 30px 25px
   display: flex
   justify-content: space-between
-  align-items: center
-  border-radius: 10px
+  align-items: flex-start
+  border-radius: 10px  
   &-card
     display: flex
     justify-content: space-between
-    align-items: center
+    align-items: flex-start
   &__title
-    width: 154px
-    height: 75px
+    max-width: 154px
+    max-height: 75px
     font-family: 'Roboto Slab', serif
     font-style: normal
     font-weight: bold
@@ -41,91 +43,9 @@
   margin-bottom: 30px
   border-radius: 10px
   overflow: hidden
-  position: relative
-  &-choice
-    position: absolute
-    right: 0
-    top: 0
-    max-width: 263px
-    height: 100%
-    border-radius: 0 10px 10px 0
-    background-color: $light
-.picture
-  &-block
-    width: 877px
-    &__img
-      width: 100%
-      height: 100%
-    &__item
-      max-width: 100%
-      height: 100%
-      position: relative
-      overflow: hidden
-      &:after
-        content: ""
-        position: absolute
-        z-index: 10
-        top: 0
-        left: 0
-        right: 0
-        bottom: 0
-        width: 100%
-        height: 100%
-        background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35))
-    &__author
-      position: absolute
-      z-index: 11   
-      top: 59px
-      left: 55px
-      display: flex
-      justify-content: flex-start
-      align-items: center
-      font-style: normal
-      font-weight: normal
-      font-size: 14px
-      line-height: 20px
-      color: $light
-      mix-blend-mode: normal
-      opacity: 0.85
-      &-name
-        display: flex
-        flex-direction: column
-        justify-content: flex-start        
-      &__avatar
-        width: 45px
-        height: 45px
-        object-fit: cover
-        border-radius: 50%
-        margin-right: 10px
-    &__job
-      font-style: normal
-      font-weight: normal
-      font-size: 12px
-      line-height: 15px
-      color: $light
-      opacity: 0.4
-  &-info
-    position: absolute
-    z-index: 11
-    top: 245px
-    left: 55px
-    display: flex
-    flex-direction: column
-    justify-content: flex-start
-    &__category
-      font-size: 12px
-      line-height: 15px
-      letter-spacing: 0.5px
-      text-transform: uppercase
-      color: $blue75
-    &__title
-      max-width: 598px
-      font-family: 'Roboto Slab', serif
-      font-style: normal
-      font-weight: bold
-      font-size: 40px
-      line-height: 50px
-      color: $light
+  position: relative    
+  display: flex
+  justify-content: space-between
 .button
   padding: 10px 25px
   background: $blue75
@@ -146,7 +66,7 @@
     height: 50px
     width: 50px
     padding-left: 18px
-    padding-top: 16px
+    padding-top: 0px
     border-radius: 50%
     border: 3px solid rgba(255,255,255,0.4)
     background: transparent
@@ -180,20 +100,137 @@
     color: $light
     mix-blend-mode: normal
     opacity: 0.4
-.choice
+.content
+  max-width: 877px
+  height: 100%
+  padding: 0
+  display: flex
+  list-style-type: none
+  margin: 0
+  &__img
+    width: 100%
+    height: 100%
+    object-fit: cover
+  &__item
+    width: 100%
+    height: 100%
+    position: relative
+    overflow: hidden
+    display: none
+    &:after
+      content: ""
+      position: absolute
+      z-index: 10
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
+      width: 100%
+      height: 100%
+      background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35))
+    &--active
+      display: block
+  &__author
+    position: absolute
+    z-index: 11   
+    top: 59px
+    left: 55px
+    display: flex
+    justify-content: flex-start
+    align-items: center
+    font-style: normal
+    font-weight: normal
+    font-size: 14px
+    line-height: 20px
+    color: $light
+    mix-blend-mode: normal
+    opacity: 0.85
+    &-name
+      display: flex
+      flex-direction: column
+      justify-content: flex-start        
+    &__avatar
+      width: 45px
+      height: 45px
+      object-fit: cover
+      border-radius: 50%
+      margin-right: 10px
+  &__job
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
+    color: $light
+    opacity: 0.4
+  &-info
+    position: absolute
+    z-index: 11
+    top: 245px
+    left: 55px
+    display: flex
+    flex-direction: column
+    justify-content: flex-start
+    &__category
+      font-size: 12px
+      line-height: 15px
+      letter-spacing: 0.5px
+      text-transform: uppercase
+      color: $blue75
+    &__title
+      max-width: 598px
+      font-family: 'Roboto Slab', serif
+      font-style: normal
+      font-weight: bold
+      font-size: 40px
+      line-height: 50px
+      color: $light    
+.tabs
+  max-width: 263px
+  height: 100%
+  position: absolute
+  right: 0
+  top: 0
+  list-style-type: none
+  padding: 0
+  margin: 0
+  border-radius: 0 10px 10px 0
+  background-color: $light
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  flex-wrap: nowrap
   &__title
-    padding: 20px 25px
+    padding: 19px 25px
     font-style: normal
     font-weight: bold
     font-size: 14px
     line-height: 20px
     text-transform: uppercase
     color: $grey95
-  &-card
-    padding-top: 17px
-    padding-left: 25px  
-    padding-right: 25px
+  &-item    
     border-top: 1px solid $grey15
+    cursor: pointer
+    padding-top: 18px
+    padding-left: 25px
+    padding-right: 25px
+    position: relative
+    &:last-child
+      padding-bottom: 28px
+    &__triangle
+      width: 0
+      height: 0
+      border-style: solid
+      border-width: 10px 12px 10px 0
+      border-color: transparent transparent transparent transparent
+      position: absolute
+      left: 0
+      top: 50%
+      transform: translate(-100%, -50%)
+      z-index: 101
+      &--active
+        border-color: transparent $grey05 transparent transparent 
+    &--active
+      background-color: $grey05        
     &__title
       font-size: 12px
       line-height: 15px
@@ -211,12 +248,21 @@
         color: $green75    
     &__text
       margin-top: 8px
+      font-style: normal
+      font-weight: normal
+      font-size: 14px
+      line-height: 20px
+      color: $grey85
       &-video
         &:after
           content: url('../img/recommended/play.svg')
           width: 20px
           height: 20px
           vertical-align: middle
+
+
+    
+              
      
 
   
