--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,5 +8,7 @@
 @import 'blocks/header'
 //Подключаем стили recommended
 @import 'blocks/recommended'
+//Подключаем стили modal
+@import 'blocks/modal'
 //Подключение стилей для адаптива
 @import 'media'
