--- a/sass/blocks/_recommended.sass
+++ b/sass/blocks/_recommended.sass
@@ -66,19 +66,24 @@
     height: 50px
     width: 50px
     padding-left: 18px
-    padding-top: 0px
+    padding-top: 15px
     border-radius: 50%
     border: 3px solid rgba(255,255,255,0.4)
     background: transparent
     margin-left: 30px
+    position: relative
     &:hover
       background-color: rgba(0, 0, 0, 0.6)
-    &-triangle
-      width: 0
-      height: 0
+    &:after
+      content: ''
+      position: absolute
+      left: 50%
+      top: 50%
+      transform: translate(-40%,-50%)
       border-style: solid
-      border-width: 7px 0 7px 12px
-      border-color: transparent transparent transparent $light      
+      border-width: 7px 0px 7px 11px
+      border-color: transparent transparent transparent $light
+         
   &__info
     display: flex
     flex-direction: column
@@ -101,7 +106,7 @@
     mix-blend-mode: normal
     opacity: 0.4
 .content
-  max-width: 877px
+  width: 877px
   height: 100%
   padding: 0
   display: flex
