create: copy style for infobox from layout

--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -7,9 +7,11 @@ $grey50: #939699
 $grey85: #4B5157
 $grey95: #30363D
 $grey100: #262D33
+$greyblue25: #D1E2EB
 $greyblue75: #6E99AE
 $blue75: #4592FF
 $blugreen75: #3BBDC4
 $purple75: #AC8EE3
+$purple25: #E7D9FF
 $orange75: #FFA34D
 $green75: #3DC47E
