--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,6 +8,8 @@
 @import 'blocks/header'
 //Подключаем стили recommended
 @import 'blocks/recommended'
+//Подключаем стили infobox
+@import 'blocks/infobox'
 //Подключаем стили modal
 @import 'blocks/modal'
 //Подключение стилей для адаптива
