create: style for infobox

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -47,7 +47,6 @@
   .divider
     margin-left: 15px
     margin-right: 15px
-
   .content
     &-info
       &__title
@@ -93,7 +92,8 @@
     &__text
       display: none   
   .recommended
-    height: 400px
+    &__backcolor
+      height: 400px
   .tabs
     &__title
       padding: 8px
@@ -124,7 +124,8 @@
   .divider
     height: 45px 
   .recommended
-    height: 300px  
+    &__backcolor
+      height: 300px
   .selection
     height: 300px  
   .tabs
@@ -206,7 +207,8 @@
       height: 220px     
 @media (max-width: 390px)  
   .recommended
-    height: 370px 
+    &__backcolor
+      height: 370px
   .article
     flex-wrap: wrap
     height: auto
