--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -8,6 +8,7 @@ $grey85: #4B5157
 $grey95: #30363D
 $grey100: #262D33
 $greyblue25: #D1E2EB
+$greyblue50: #B4D1E0
 $greyblue75: #6E99AE
 $blue75: #4592FF
 $blugreen75: #3BBDC4
