--- a/sass/blocks/_recommended.sass
+++ b/sass/blocks/_recommended.sass
@@ -1,7 +1,16 @@
 .recommended
-  height: 475px
   padding-top: 30px
-  background-color: $grey100
+  position: relative
+  &__backcolor
+    position: absolute
+    z-index: -1
+    top: 0
+    left: 
+    right: 0
+    width: 100%
+    height: 475px
+    background-color: $grey100
+    
 .article
   width: 100%
   height: 130px
@@ -40,7 +49,6 @@
   width: 100%
   height: 570px
   margin-top: 30px
-  margin-bottom: 30px
   border-radius: 10px
   overflow: hidden
   position: relative    
