--- a/sass/blocks/_infobox.sass
+++ b/sass/blocks/_infobox.sass
@@ -1,5 +1,8 @@
 .infobox
   padding-top: 30px
+  &-title
+    margin: 0
+    padding-top: 20px
   &-wrapper
     width: 100%
     height: 770px
@@ -9,8 +12,7 @@
     grid-gap: 30px
   &__cars
     grid-row: 1 / 3
-    grid-column: 1 / 3
-    
+    grid-column: 1 / 3    
   &__cat
     grid-row: 3 / 5 
     grid-column: 1 / 2
@@ -77,7 +79,7 @@
       line-height: 30px
       color: $grey100      
     &__text
-      padding-top: 25px
+      margin-top: 25px
       font-style: normal
       font-weight: normal
       font-size: 14px
@@ -89,6 +91,8 @@
       object-fit: cover
       border-radius: 50%
     &__author
+      display: block
+      flex-shrink: 0
       margin-left: 10px
       font-weight: bold
       font-size: 14px
@@ -155,7 +159,10 @@
       text-transform: uppercase
       color: $purple25
     &__title
+      display: block
       width: 203px
+      margin-top: 10px
+      margin-bottom: 15px
       font-family: 'Roboto Slab', serif
       font-style: normal
       font-weight: bold
@@ -199,10 +206,11 @@
     overflow: hidden
     &__img
       width: 100%
-      height: 275px
+      height: 75%
       object-fit: cover
     &__title         
       width: 100%
+      height: 25%
       display: block
       padding: 15px 25px 30px
       font-family: 'Roboto Slab', serif
