--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -59,6 +59,8 @@
   .container
     max-width: 800px  
   .header
+    &__logo
+      padding-left: 40px
     &-bottom
       &__title
         padding: 0
@@ -67,6 +69,8 @@
         align-items: flex-end
       &__date
         margin-bottom: 5px 
+      &__text
+        display: none
   .article
     padding: 15px 15px 15px 15px
     height: auto
@@ -80,6 +84,7 @@
   .divider
     margin-left: 15px
     margin-right: 15px
+    height: 55px
   .content
     &-info
       &__title
@@ -103,7 +108,7 @@
   .navbar
     display: none
     position: fixed
-    z-index: 100
+    z-index: 200
     left: 0
     right: 0
     bottom: 0
@@ -190,7 +195,6 @@
     &__subscribe
       display: none
   .article
-    height: 75px
     &__img
       display: none
   .divider
@@ -227,9 +231,14 @@
   .container
     max-width: 440px 
   .header
-    &-bottom
+    &-bottom   
+      justify-content: center   
       &__img
-        display: none   
+        display: none 
+      &__info
+        display: none  
+    &__logo
+      padding-left: 0      
   .article
     padding: 10px 10px 10px 10px
     &__title
