--- a/sass/blocks/_recommended.sass
+++ b/sass/blocks/_recommended.sass
@@ -24,6 +24,8 @@
     display: flex
     justify-content: space-between
     align-items: flex-start
+    &:hover
+      opacity: 0.8
   &__title
     max-width: 154px
     max-height: 75px
@@ -33,9 +35,7 @@
     font-size: 16px
     line-height: 25px
     color: $light
-    text-decoration: none
-    &:hover
-      text-decoration: underline
+    text-decoration: none    
   &__img
     width: 65px
     height: 65px
@@ -61,6 +61,8 @@
   font-size: 14px
   line-height: 20px
   color: $light
+  &:hover
+    opacity: 0.8
   &__img
     margin-left: 5px
   &-block
@@ -161,7 +163,8 @@
     &-name
       display: flex
       flex-direction: column
-      justify-content: flex-start        
+      justify-content: flex-start 
+      color: $light       
     &__avatar
       width: 45px
       height: 45px
@@ -195,8 +198,13 @@
       font-style: normal
       font-weight: bold
       font-size: 40px
-      line-height: 50px
-      color: $light    
+      line-height: 50px         
+    &__link
+      color: $light
+      border-bottom: 1px solid transparent
+      &:hover
+        border-bottom: 1px solid $light
+
 .tabs
   max-width: 263px
   height: 100%
@@ -239,7 +247,7 @@
       left: 0
       top: 50%
       transform: translate(-100%, -50%)
-      z-index: 101
+      z-index: 100
       &--active
         border-color: transparent $grey05 transparent transparent 
     &--active
@@ -268,10 +276,12 @@
       color: $grey85
       &-video
         &:after
-          content: url('../img/recommended/play.svg')
+          content: url('../img/recommended/Play.svg')
           width: 20px
           height: 20px
           vertical-align: middle
+        &:hover:after
+          opacity: 0.4  
 
 
     
