create: style for flowering&structure for page

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -12,6 +12,17 @@ button
   cursor: pointer
   border: none
   outline: none  
+.button
+  padding: 10px 25px
+  background: $blue75
+  border-radius: 20px
+  font-size: 14px
+  line-height: 20px
+  color: $light
+  &:hover
+    opacity: 0.8
+  &__img
+    margin-left: 5px  
 input
   border: none
   outline: none
