--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,15 +1,17 @@
+//Подключаем переменные
+@import 'variables'
 //Подключаем базовые настройки
 @import 'settings'
 //Подключаем библиотеку normalize
 @import 'normalize'
-//Подключаем переменные
-@import 'variables'
 //Подключаем стили header
 @import 'blocks/header'
 //Подключаем стили recommended
 @import 'blocks/recommended'
 //Подключаем стили infobox
 @import 'blocks/infobox'
+//Подключаем стили infobox
+@import 'blocks/flowering'
 //Подключаем стили modal
 @import 'blocks/modal'
 //Подключение стилей для адаптива
