--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -90,6 +90,21 @@
       &__title
         font-size: 30px
         line-height: 40px
+  .page
+    &-wrapper
+      flex-direction: column  
+    &-column
+      margin-top: 20px
+      margin-left: 0
+      width: 100% 
+      flex-direction: row
+      flex-wrap: wrap
+      &__recommended
+        width: 100%
+      &__item
+        width: 50%
+      &-footer
+        width: 100%    
 @media (max-width: 880px)
   .container
     max-width: 700px  
@@ -227,6 +242,19 @@
     &__text
       font-size: 12px
       line-height: 15px
+  .list
+    &-item
+      &__img
+        width: 45%  
+      &__category
+        font-size: 10px
+        line-height: 12px  
+      &__title
+        font-size: 18px
+        line-height: 20px  
+      &__text
+        font-size: 12px
+        line-height: 15px  
 @media (max-width: 640px)
   .container
     max-width: 440px 
@@ -364,6 +392,17 @@
         margin-top: 0
         font-size: 10px
         line-height: 12px
+  .list
+    &-item
+      &__category
+        font-size: 8px
+        line-height: 10px  
+      &__title
+        font-size: 14px
+        line-height: 18px  
+      &__text
+        font-size: 10px
+        line-height: 12px        
 @media (max-width: 390px)  
   .recommended
     &__backcolor
