--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,8 +10,10 @@
 @import 'blocks/recommended'
 //Подключаем стили infobox
 @import 'blocks/infobox'
-//Подключаем стили infobox
+//Подключаем стили flowering
 @import 'blocks/flowering'
+//Подключаем стили page
+@import 'blocks/page'
 //Подключаем стили modal
 @import 'blocks/modal'
 //Подключение стилей для адаптива
