create: add&style section hot

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,6 +14,8 @@
 @import 'blocks/flowering'
 //Подключаем стили page
 @import 'blocks/page'
+//Подключаем стили hot
+@import 'blocks/hot'
 //Подключаем стили modal
 @import 'blocks/modal'
 //Подключение стилей для адаптива
