--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -104,7 +104,13 @@
       &__item
         width: 50%
       &-footer
-        width: 100%    
+        width: 100% 
+@media (max-width: 992px)
+  .navbar
+    &-menu
+      &__link
+        &:hover
+          border-bottom: 1px solid transparent            
 @media (max-width: 880px)
   .container
     max-width: 700px  
