create: add&style section subscribe and footer

--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -11,6 +11,7 @@ $greyblue25: #D1E2EB
 $greyblue50: #B4D1E0
 $greyblue75: #6E99AE
 $blue75: #4592FF
+$hoverbutton: #046CFF
 $blugreen75: #3BBDC4
 $purple75: #AC8EE3
 $purple25: #E7D9FF
