--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,6 +16,10 @@
 @import 'blocks/page'
 //Подключаем стили hot
 @import 'blocks/hot'
+//Подключаем стили subscribe
+@import 'blocks/subscribe'
+//Подключаем стили footer
+@import 'blocks/footer'
 //Подключаем стили modal
 @import 'blocks/modal'
 //Подключение стилей для адаптива
