--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -20,7 +20,7 @@ button
   line-height: 20px
   color: $light
   &:hover
-    opacity: 0.8
+    background: $hoverbutton
   &__img
     margin-left: 5px  
 input
@@ -28,3 +28,7 @@ input
   outline: none
 a
   text-decoration: none
+  border-bottom: 1px solid transparent 
+ul 
+  margin: 0
+  list-style-type: none  
