--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,4 +1,10 @@
 @media (max-width: 1200px)
+  .hot
+    display: none
+  .subscribe
+    display: none
+  .footer
+    display: none    
   .container
     max-width: 960px 
   .content
@@ -55,6 +61,10 @@
         width: 48%
       &__info
         width: 50% 
+  .flowering
+    &__title
+      font-size: 38px
+      line-height: 48px
 @media (max-width: 1005px)
   .container
     max-width: 800px  
@@ -94,23 +104,29 @@
     &-wrapper
       flex-direction: column  
     &-column
-      margin-top: 20px
-      margin-left: 0
-      width: 100% 
-      flex-direction: row
-      flex-wrap: wrap
-      &__recommended
-        width: 100%
-      &__item
-        width: 50%
-      &-footer
-        width: 100% 
+      display: none
+  .list
+    width: 100%    
 @media (max-width: 992px)
+  .page
+    &-column
+      &__link
+        &:hover
+          border-bottom: 1px solid transparent 
+          text-decoration: none
+  .list
+    &-item
+      &__title
+        &-link
+          &:hover
+            border-bottom: 1px solid transparent      
+            text-decoration: none          
   .navbar
     &-menu
       &__link
         &:hover
-          border-bottom: 1px solid transparent            
+          border-bottom: 1px solid transparent
+          text-decoration: none            
 @media (max-width: 880px)
   .container
     max-width: 700px  
@@ -209,6 +225,10 @@
       grid-gap: 10px
       &__article
         border-bottom: 1px solid transparent
+  .flowering
+    &__title
+      font-size: 35px
+      line-height: 45px      
 @media (max-width: 768px)
   .container
     max-width: 600px
@@ -250,8 +270,8 @@
       line-height: 15px
   .list
     &-item
-      &__img
-        width: 45%  
+      &__link
+        min-width: 45%  
       &__category
         font-size: 10px
         line-height: 12px  
@@ -261,6 +281,10 @@
       &__text
         font-size: 12px
         line-height: 15px  
+  .flowering
+    &__title
+      font-size: 30px
+      line-height: 40px       
 @media (max-width: 640px)
   .container
     max-width: 440px 
@@ -344,6 +368,13 @@
         font-size: 12px
         line-height: 15px 
         margin-bottom: 10px
+  .list
+    &-item
+      flex-direction: column 
+      &__link
+        margin-right: 0
+      &__info
+        margin-top: 10px       
   .modal
     &__video
       width: 440px
@@ -367,6 +398,10 @@
     &__video
       width: 400px
       height: 220px     
+  .flowering
+    &__title
+      font-size: 28px
+      line-height: 35px    
 @media (max-width: 430px)
   .infobox
     &-wrapper
@@ -397,19 +432,18 @@
       &__date  
         margin-top: 0
         font-size: 10px
-        line-height: 12px
-  .list
-    &-item
-      &__category
-        font-size: 8px
-        line-height: 10px  
-      &__title
-        font-size: 14px
-        line-height: 18px  
-      &__text
-        font-size: 10px
-        line-height: 12px        
+        line-height: 12px         
 @media (max-width: 390px)  
+ 
+  .search
+    display: flex
+    align-items: center
+    &__img
+      width: 12px
+      height: 12px
+    &__input
+        font-size: 12px
+
   .recommended
     &__backcolor
       height: 370px
@@ -427,6 +461,23 @@
     &__video
       width: 370px
       height: 220px  
+@media ( max-width: 340px )
+  .list
+    &-item 
+      &__category
+        font-size: 10px
+        line-height: 12px  
+      &__title
+        margin: 10px 0
+        font-size: 16px
+        line-height: 18px  
+      &__text
+        font-size: 10px
+        line-height: 12px 
+      &__counters
+        font-size: 10px
+        line-height: 12px  
+        
 
 
 
