--- a/sass/blocks/_page.sass
+++ b/sass/blocks/_page.sass
@@ -48,22 +48,24 @@
           right: 25px
           height: 1px
           background-color: $grey15
-      &-title
-        font-style: normal
-        font-weight: normal
-        font-size: 14px
-        line-height: 20px
-        color: $grey85
-        margin-bottom: 5px
-      &-time
-        font-style: normal
-        font-weight: normal
-        font-size: 12px
-        line-height: 15px
-        color: $grey50
+    &__link
+      font-style: normal
+      font-weight: normal
+      font-size: 14px
+      line-height: 20px
+      color: $grey85
+      margin-bottom: 5px
+      &:hover
+        text-decoration: underline
+    &__time
+      font-style: normal
+      font-weight: normal
+      font-size: 12px
+      line-height: 15px
+      color: $grey50
     &__img
-      width: 60px
-      height: 60px
+      width: 100%
+      height: 100%
       object-fit: cover
     &__text
       margin-left: 10px
@@ -71,6 +73,17 @@
       flex-direction: column
       justify-content: flex-start
       align-items: flex-start 
+      position: relative
+    &__number
+      position: absolute
+      top: 0
+      right: 0
+      font-style: italic
+      font-weight: bold
+      font-size: 70px
+      line-height: 50px
+      color: $grey100
+      opacity: 0.08
     &__footer
       font-weight: bold
       font-size: 14px
@@ -82,25 +95,35 @@
       padding-bottom: 14px  
       display: flex
       justify-content: center
-      align-items: center      
+      align-items: center   
+  &-img
+    &__link
+      display: block
+      min-width: 60px
+      min-height: 60px       
 .list
   &-item
     padding: 25px
     display: flex
     position: relative
-    &:after
-      content: ""
-      position: absolute
-      bottom: 0
-      left: 25px
-      right: 25px      
-      height: 1px
-      background-color: $grey15
-    &__img
+    &:not(:nth-last-child(1))
+      &:after
+        content: ""
+        position: absolute
+        bottom: 0
+        left: 25px
+        right: 25px      
+        height: 1px
+        background-color: $grey15
+    &__link
       display: block
       margin-right: 25px  
-      width: 336px
+      min-width: 336px
       min-height: 100%
+      overflow: hidden
+    &__img
+      width: 100%
+      height: 100%  
       object-fit: cover      
     &__category  
       font-size: 12px
@@ -122,6 +145,11 @@
       font-size: 20px
       line-height: 25px
       color: $grey100
+      &-link
+        color: inherit
+        border-bottom: 1px solid transparent
+        &:hover
+          border-bottom: 1px solid $grey100 
     &__text
       font-style: normal
       font-weight: normal
@@ -131,7 +159,7 @@
     &__counters
       display: flex
       justify-content: flex-start
-      align-items: center
+      align-items: flex-start
       font-style: normal
       font-weight: normal
       font-size: 12px
@@ -140,18 +168,22 @@
     &__date
       margin-right: 10px
     &__comment
+      color: $grey50
       margin-right: 10px 
       display: flex
-      align-items: start
+      align-items: center
     &__like
+      color: $grey50
       display: flex
-      align-items: start    
+      align-items: center    
     &__number
-      margin-left: 5px   
+      margin-left: 5px 
+    &__info
+      position: relative    
 .bookmark
   position: absolute
-  right: 25px
-  top: 25px    
+  right: 0
+  top: 0    
   &-red path
     fill: $red75
   &-container
