fixed: adapt section infobox

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,5 +22,9 @@
 @import 'blocks/footer'
 //Подключаем стили modal
 @import 'blocks/modal'
+//Подключаем стили article-main
+@import 'article/article-main'
+//Подключаем стили article-begin
+@import 'article/article-begin'
 //Подключение стилей для адаптива
 @import 'media'
