--- a/sass/blocks/_infobox.sass
+++ b/sass/blocks/_infobox.sass
@@ -1,12 +1,15 @@
 .infobox
   padding-top: 30px
   padding-bottom: 60px
+  &-card
+    &:hover
+      cursor: pointer
+      box-shadow: 0 0 6px 3px $hovercard
   &-title
     margin: 0
     padding-top: 20px
   &-wrapper
     width: 100%
-    height: 770px
     display: grid
     grid-template-rows: 1fr 1fr 1fr 1fr
     grid-template-columns: 1fr 1fr 1fr 1fr
@@ -43,6 +46,7 @@
     text-transform: uppercase
     color: $greyblue75
   &-cars
+    height: 370px
     background: $light
     border-radius: 10px
     display: flex
@@ -54,7 +58,7 @@
       display: flex
       flex-direction: column
       justify-content: flex-start
-      width: 263px
+      max-width: 263px
       padding-top: 20px
       padding-left: 35px
     &__img
@@ -77,14 +81,14 @@
       font-style: normal
       font-weight: bold
       font-size: 25px
-      line-height: 30px
+      line-height: 120%
       color: $grey100      
     &__text
       margin-top: 25px
       font-style: normal
       font-weight: normal
       font-size: 14px
-      line-height: 20px
+      line-height: 143%
       color: $grey85
     &__avatar
       width: 30px
@@ -124,6 +128,7 @@
       color: $grey50
       margin-left: 6px
   &-art
+    height: 370px
     border-radius: 10px
     overflow: hidden
     position: relative
@@ -202,6 +207,7 @@
       justify-content: space-between
       align-items: center  
   &-cat
+    height: 370px
     background-color: $light
     border-radius: 10px
     overflow: hidden
@@ -218,7 +224,7 @@
       font-style: normal
       font-weight: bold
       font-size: 16px
-      line-height: 25px
+      line-height: 156%
       color: $grey100
   &-item
     background-color: $light
@@ -247,13 +253,14 @@
       line-height: 15px
       color: $grey50
   &-columns
+    min-height: 770px
     background: $greyblue75
     border-radius: 10px
     overflow: hidden
     display: grid
     grid-template-areas: "title title title" "left article1 right" "left article2 right" "left article3 right" "footer footer footer"
     grid-template-rows: 60px 1fr 1fr 1fr 45px
-    grid-template-columns: 24px 1fr 24px
+    grid-template-columns: 25px 1fr 25px
     &__category
       grid-area: title
       padding: 20px 25px
@@ -269,7 +276,7 @@
       font-style: normal
       font-weight: bold
       font-size: 20px
-      line-height: 25px
+      line-height: 125%
       color: $base
       text-decoration: none
       position: relative
@@ -283,9 +290,7 @@
     &__article
       width: 100%
       border-bottom: 1px solid $greyblue50
-      padding-top: 45px
-      padding-left: 10px
-      padding-bottom: 30px
+      padding: 45px 10px 30px
       &-one
         grid-area: article1 
       &-two
@@ -327,6 +332,8 @@
       line-height: 20px
       color: $base
       border-top: 1px solid $greyblue50
+      &:hover
+        background: $hovercard
 .author
   &__info
     display: flex
