--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -32,3 +32,7 @@ a
 ul 
   margin: 0
   list-style-type: none  
+.invalid  
+  color: $red75
+.invalid::-webkit-input-placeholder 
+  color: $red75 
