--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -12,6 +12,7 @@ $greyblue50: #B4D1E0
 $greyblue75: #6E99AE
 $blue75: #4592FF
 $hoverbutton: #046CFF
+$hovercard: #6e89ae 
 $blugreen75: #3BBDC4
 $purple75: #AC8EE3
 $purple25: #E7D9FF
