--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -29,3 +29,17 @@
   &__button
     width: 119px
     height: 40px  
+ 
+.input
+  &-group
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    align-items: flex-start 
+    position: relative
+    & label
+      position: absolute
+      top: 45px
+      left: 15px
+      font-size: 12px
+      line-height: 130%
