--- a/sass/blocks/_flowering.sass
+++ b/sass/blocks/_flowering.sass
@@ -30,7 +30,7 @@
     font-style: normal
     font-weight: bold
     font-size: 40px
-    line-height: 50px
+    line-height: 125%
     color: $light
     text-align: center
     margin-bottom: 25px 
