--- a/sass/blocks/_recommended.sass
+++ b/sass/blocks/_recommended.sass
@@ -13,33 +13,45 @@
     
 .article
   width: 100%
-  height: 130px
   background-color: $grey95 
-  padding: 25px 25px 30px 25px
+  padding: 25px 0 25px 0
   display: flex
   justify-content: space-between
   align-items: flex-start
   border-radius: 10px  
-  &-card
+  &-link
     display: flex
     justify-content: space-between
     align-items: flex-start
     &:hover
-      opacity: 0.8
+      background: $grey85 
+  &__item
+    width: 100%
+    height: 100%  
+    padding-right: 24px
+    padding-left: 24px
+    position: relative       
+    &:not(:nth-last-child(1))   
+      &:after                      
+        content: ""
+        position: absolute
+        bottom: 0px
+        top: 0px
+        right: 0px
+        width: 1px
+        background-color: $grey85
   &__title
-    max-width: 154px
-    max-height: 75px
     font-family: 'Roboto Slab', serif
     font-style: normal
     font-weight: bold
     font-size: 16px
-    line-height: 25px
+    line-height: 156%
     color: $light
     text-decoration: none    
   &__img
     width: 65px
     height: 65px
-    margin-left: 15px
+    margin-left: 12px
 .divider
   height: 75px
   border-left: 1px solid $grey85
@@ -50,10 +62,10 @@
   height: 570px
   margin-top: 30px
   border-radius: 10px
-  overflow: hidden
   position: relative    
   display: flex
   justify-content: space-between
+  align-items: flex-start
 .button
   &-block
     display: flex
@@ -109,9 +121,10 @@
   width: 877px
   height: 100%
   padding: 0
-  display: flex
   list-style-type: none
   margin: 0
+  border-radius: 10px 0 0 10px
+  overflow: hidden
   &__img
     width: 100%
     height: 100%
@@ -121,7 +134,7 @@
     height: 100%
     position: relative
     overflow: hidden
-    display: none
+    display: none    
     &:after
       content: ""
       position: absolute
@@ -173,6 +186,7 @@
     z-index: 11
     top: 245px
     left: 55px
+    padding-right: 10px
     display: flex
     flex-direction: column
     justify-content: flex-start
@@ -188,7 +202,7 @@
       font-style: normal
       font-weight: bold
       font-size: 40px
-      line-height: 50px         
+      line-height: 125%        
     &__link
       color: $light
       border-bottom: 1px solid transparent
@@ -196,7 +210,7 @@
         border-bottom: 1px solid $light
 
 .tabs
-  max-width: 263px
+  width: 263px
   height: 100%
   position: absolute
   right: 0
@@ -215,18 +229,17 @@
     font-style: normal
     font-weight: bold
     font-size: 14px
-    line-height: 20px
+    line-height: 143%
     text-transform: uppercase
     color: $grey95
   &-item    
+    flex-shrink: 1
+    width: 100%
+    height: 100%
     border-top: 1px solid $grey15
     cursor: pointer
-    padding-top: 18px
-    padding-left: 25px
-    padding-right: 25px
+    padding: 18px 25px 18px 25px
     position: relative
-    &:last-child
-      padding-bottom: 28px
     &__triangle
       width: 0
       height: 0
@@ -244,7 +257,7 @@
       background-color: $grey05        
     &__title
       font-size: 12px
-      line-height: 15px
+      line-height: 125%
       letter-spacing: 0.5px
       text-transform: uppercase
       &-bluegreen75
@@ -259,19 +272,33 @@
         color: $green75    
     &__text
       margin-top: 8px
+      margin-bottom: 0
       font-style: normal
       font-weight: normal
       font-size: 14px
-      line-height: 20px
+      line-height: 143%
       color: $grey85
       &-video
+        display: inline-block
+        vertical-align: middle
+        height: 20px
+        width: 20px
+        border-radius: 50%
+        border: 1px solid $grey15
+        background: transparent
+        margin-left: 5px
+        position: relative
+        &:hover
+          background-color: rgba(0, 0, 0, 0.6)
         &:after
-          content: url('../img/recommended/Play.svg')
-          width: 20px
-          height: 20px
-          vertical-align: middle
-        &:hover:after
-          opacity: 0.4  
+          content: ''
+          position: absolute
+          left: 50%
+          top: 50%
+          transform: translate(-40%,-50%)
+          border-style: solid
+          border-width: 3px 0px 3px 6px
+          border-color: transparent transparent transparent $grey100
 
 
     
