--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -10,6 +10,7 @@ $grey100: #262D33
 $greyblue25: #D1E2EB
 $greyblue50: #B4D1E0
 $greyblue75: #6E99AE
+$blue25: #C5E4FC
 $blue75: #4592FF
 $hoverbutton: #046CFF
 $hovercard: #6e89ae 
